--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,8 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    //implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.7.0' // добавил эту версию, чтобы взлетело "Material3.BottomAppBar"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.12.1'
 
@@ -55,4 +56,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
 }
